# lesta-test-task-2024

./: .clang-format  .cmake-format.json  .gitignore  .gn  BUILD.gn  CMakeLists.txt  README.md  TODO  conanfile.txt
.helix/: config.toml  languages.toml
bench/: CMakeLists.txt  main.cpp  plot.gnuplot
include/tt/: detail.hpp  iseven.hpp  lock_free_ringbuf.hpp  ringbuf.hpp  sort.hpp  tt.hpp
tests/: CMakeLists.txt  iseven.test.cpp  lock_free_ringbuf.test.cpp  main.test.cpp  ringbuf.test.cpp  sort.test.cpp  tt.test.cpp
