config("tt") {
    include_dirs = [
        "include/"
    ]

    inputs = [
        "include/tt/ringbuf.hpp",
        "include/tt/lock_free_ringbuf.hpp",
        "include/tt/iseven.hpp",
        "include/tt/detail.hpp",
    ]

    configs = [
        "//build:compiler_defaults",
    ]
}

executable("tests") {
    sources = [
        "tests/main.test.cpp",
    ]

    configs = [
        ":tt",
        "//build:debug",
    ]
}

