config("tt") {
    include_dirs = [
        "include/"
    ]

    inputs = [
        "include/tt/ringbuf.hpp",
        "include/tt/lock_free_ringbuf.hpp",
        "include/tt/iseven.hpp",
        "include/tt/sort.hpp",
        "include/tt/detail.hpp",
    ]

    configs = [
        "//build:compiler_defaults",
    ]
}

config("doctest") {
    inputs = [
        "tests/doctest.h",
    ]

    configs = [
        "//build:compiler_defaults",
    ]
}

executable("tests") {
    sources = [
        "tests/main.test.cpp",
        "tests/iseven.test.cpp",
        "tests/ringbuf.test.cpp",
        "tests/lock_free_ringbuf.test.cpp",
        "tests/sort.test.cpp",
    ]

    configs = [
        ":tt",
        ":doctest",
        "//build:debug",
    ]
}

